<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2D2D2D"
    android:layoutDirection="rtl">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardBackgroundColor="#333333"
        app:cardCornerRadius="15dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="29dp">

            <ImageView
                android:id="@+id/logo_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="17dp"
                android:contentDescription="@string/app_logo"
                app:srcCompat="@drawable/ic_account"
                app:tint="#D4AF37" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:tabBackground="@android:color/transparent"
                app:tabIndicatorAnimationMode="elastic"
                app:tabIndicatorColor="#D4AF37"
                app:tabSelectedTextColor="#D4AF37"
                app:tabTextColor="#AAAAAA">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register" />
            </com.google.android.material.tabs.TabLayout>

            <FrameLayout
                android:id="@+id/form_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- فرم ورود -->
                <LinearLayout
                    android:id="@+id/login_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/username_or_email"
                        app:boxStrokeColor="#D4AF37"
                        app:hintTextColor="#D4AF37">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/login_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/username_or_email"
                            android:inputType="textEmailAddress"
                            android:textColor="#FFFFFF"
                            android:textDirection="rtl" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/password"
                        app:boxStrokeColor="#D4AF37"
                        app:endIconMode="password_toggle"
                        app:hintTextColor="#D4AF37">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/login_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/password"
                            android:inputType="textPassword"
                            android:textColor="#FFFFFF"
                            android:textDirection="rtl" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/tv_forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginBottom="8dp"
                        android:padding="4dp"
                        android:text="@string/forgot_password"
                        android:textColor="#AAAAAA"
                        android:textSize="14sp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/login_button"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginBottom="8dp"
                        android:backgroundTint="#D4AF37"
                        android:text="@string/login"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:cornerRadius="8dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:text="@string/or"
                        android:textColor="#AAAAAA" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/google_login_button"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginBottom="25dp"
                        android:contentDescription="@string/google_sign_in"
                        android:text="@string/google_sign_in"
                        android:textColor="#FFFFFF"
                        app:cornerRadius="8dp"
                        app:icon="@drawable/ic_google"
                        app:iconGravity="start"
                        app:iconTint="#FFFFFF"
                        app:strokeColor="#D4AF37" />
                </LinearLayout>

                <!-- فرم ثبت‌نام -->
                <LinearLayout
                    android:id="@+id/register_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:hint="@string/username"
                        app:boxStrokeColor="#D4AF37"
                        app:hintTextColor="#D4AF37">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/register_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/username"
                            android:inputType="text"
                            android:textColor="#FFFFFF"
                            android:textDirection="rtl" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:hint="@string/email"
                        app:boxStrokeColor="#D4AF37"
                        app:hintTextColor="#D4AF37">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/register_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/email"
                            android:inputType="textEmailAddress"
                            android:textColor="#FFFFFF"
                            android:textDirection="rtl" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:hint="@string/age"
                        app:boxStrokeColor="#D4AF37"
                        app:hintTextColor="#D4AF37">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/register_age"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/age"
                            android:inputType="number"
                            android:textColor="#FFFFFF"
                            android:textDirection="rtl" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:hint="@string/password"
                        app:boxStrokeColor="#D4AF37"
                        app:endIconMode="password_toggle"
                        app:hintTextColor="#D4AF37">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/register_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/password"
                            android:inputType="textPassword"
                            android:textColor="#FFFFFF"
                            android:textDirection="rtl" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/register_button"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:backgroundTint="#D4AF37"
                        android:text="@string/register"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:cornerRadius="8dp" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>